Fix portfolio card image not align itself to the center

--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,6 @@ footer {
 .card-image {
   position: relative;
   width: 200px;
-  height: 110px;
   margin: 20px;
   align-self: center;
 }
